# cg-project-raytracing

./: CMakeLists.txt  README.md  camera.h  cube.h  imageloader.h  intersect.h  main.cpp  material.h  skybox.h  sphere.h
